<resources>
    <string name="app_name">LoginChurrasco</string>
    <string name="pie_de_pagina">web services under your control</string>
    <string name="remember">remember</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_maps">Map</string>
    <string name="preference_token">preference_token</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="registrar">Registrar</string>
</resources>