<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/username"
        android:textColorHint="#7d7e8a"
        android:background="@drawable/textview_user"
        android:elevation="3dp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_person"
        android:textColor="#7d7e8a"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#7d7e8a"
        android:textColor="#7d7e8a"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/textview_pass"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@id/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logIn"
        android:layout_marginBottom="10dp"/>

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/logIn"
        app:layout_constraintBottom_toBottomOf="@id/logIn"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/pie"/>

    <TextView
        android:id="@+id/pie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_de_pagina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>