<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_camara"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mas"
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/texto"
                android:background="@drawable/ic_add_circle"/>

            <TextView
                android:id="@+id/texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#707070"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mas"
                android:text="Subir Imagen"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_margin="20dp"
        android:gravity="start"
        android:hint="@string/nombre"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:maxHeight="100dp"
        android:maxLength="4000"
        android:minHeight="100dp"
        android:padding="10dp"
        android:textColor="#515151"
        android:textColorHint="#C4C2C2"
        android:background="@drawable/new_textview"
        app:layout_constraintTop_toBottomOf="@id/image"/>

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:gravity="start"
        android:hint="@string/descripcion"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:maxHeight="100dp"
        android:maxLength="4000"
        android:minHeight="100dp"
        android:padding="10dp"
        android:textColor="#515151"
        android:textColorHint="#C4C2C2"
        android:background="@drawable/new_textview"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>